# AURORA-PRISM

./: .env.example  .gitignore  API_REFERENCE.md  DATABASE_ERD.html  DATABASE_TABLES.md  README.md  SETUP.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260522_0001_initial_schema.py  20260531_0002_users.py  20260531_0003_episode_ownership.py  20260531_0004_remove_user_role.py  20260531_0005_section_outputs.py  20260531_0006_remove_redundant_context_fields.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: api.py
backend/app/services/: ai_clients.py  analysis.py  analysis_events.py  analysis_graph.py  assets.py  audio.py  audio_transcription.py  auth.py  events.py  exports.py  llm.py  observability.py  rendering.py  transcripts.py
backend/scripts/: seed_demo.py
backend/tests/: test_analysis_auto_title.py  test_analysis_events.py  test_analysis_helpers.py  test_auth.py  test_events.py  test_llm_service.py  test_ownership.py  test_profile_routes.py  test_rendering.py  test_transcripts.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
frontend/src/lib/: api.test.ts  api.ts
