[project]
name = "aurora-prism-backend"
version = "0.1.0"
description = "FastAPI backend for AURORA PRISM podcast clip discovery."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic-settings==2.7.1",
    "python-multipart==0.0.20",
    "aiofiles==24.1.0",
    "pypdf==5.1.0",
    "python-docx==1.1.2",
    "reportlab==4.2.5",
    "openai==1.59.7",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langfuse==3.3.4",
    "loguru==0.7.3",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "httpx==0.28.1",
    "aiosqlite==0.20.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
